# ArcadiaSans

./: .gitignore  ArcadiaSans.glyphs  BUILDING.md  LICENSE.md  Makefile  README.md  pyproject.toml
ArcadiaSans.glyphspackage/: fontinfo.plist  order.plist
ArcadiaSans.glyphspackage/glyphs/: A_.glyph  A_caron.glyph  A_dieresismacron.glyph  A_dotbelow.glyph  A_grave.glyph  A_macron.glyph  A_tilde.glyph  B_.glyph  B_dotbelow.glyph  C_.glyph  C_acute.glyph  C_caron.glyph  D_.glyph  D_dotbelow.glyph  D_elta.glyph  D_macronbelow.glyph  E_.glyph  E_acute.glyph  E_caron.glyph  E_cedilla.glyph  E_circumflex.glyph  E_circumflexdotbelow.glyph  E_dieresis.glyph  E_dotaccent.glyph  E_dotbelow.glyph  E_grave.glyph  E_macron.glyph  E_th.glyph  E_tilde.glyph  G_.glyph  G_caron.glyph  G_dotaccent.glyph  H_.glyph  H_bar.glyph  H_dotbelow.glyph  I_.glyph  I_.ss01.glyph  I_acute.glyph  I_caron.glyph  I_dotbelow.glyph  (+341 more)
scripts/: generate_ufo.py
src/ArcadiaSans.glyphspackage/: fontinfo.plist  order.plist
src/ArcadiaSans.glyphspackage/glyphs/: A_.glyph  A_E_.glyph  A_acute.glyph  A_breve.glyph  A_brevedotbelow.glyph  A_caron.glyph  A_circumflex.glyph  A_circumflexdotbelow.glyph  A_dieresis.glyph  A_dieresismacron.glyph  A_dotbelow.glyph  A_grave.glyph  A_macron.glyph  A_ogonek.glyph  A_ring.glyph  A_tilde.glyph  B_.glyph  B_dotbelow.glyph  C_.glyph  C_acute.glyph  C_caron.glyph  C_cedilla.glyph  C_circumflex.glyph  C_dotaccent.glyph  D_.glyph  D_caron.glyph  D_circumflexbelow.glyph  D_croat.glyph  D_dotbelow.glyph  E_.glyph  (+515 more)
src/arcadia_sans.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
